# prompt_mapper

./: .flake8  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  LICENSE  MANIFEST.in  Makefile  README.md  docker-compose.yml  functional_requirements.md  main_entry.py  prompt_mapper.spec  pyi_rth_certifi.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: code-quality.yml  pr-validation.yml  release.yml
config/: config.example.yaml
docker/: README.md  nginx.conf
docker/radarr/config/: .gitignore  config.xml  logs.db-shm  logs.db-wal  radarr.db  radarr.db-shm  radarr.db-wal
docker/radarr/config/asp/: key-41a6b29e-5a07-499e-95ff-9fe9245a9095.xml  key-940ab538-0496-42e9-9403-bf064e9b7a08.xml
examples/: README.md
scripts/: create_test_movies.py  run_integration_tests.sh  setup_radarr.sh  start_test_env.sh  stop_test_env.sh
src/prompt_mapper/: __init__.py  __main__.py
src/prompt_mapper/cli/: __main__.py  main.py
src/prompt_mapper/config/: __init__.py  config_manager.py  models.py
src/prompt_mapper/core/interfaces/: __init__.py  file_scanner.py  llm_service.py  movie_orchestrator.py  movie_resolver.py  radarr_service.py  tmdb_service.py
src/prompt_mapper/core/models/: __init__.py  file_info.py  llm_response.py  movie.py  processing_result.py
src/prompt_mapper/core/services/: __init__.py  file_scanner.py  llm_services.py  movie_orchestrator.py  movie_resolver.py  radarr_service.py  tmdb_service.py
src/prompt_mapper/infrastructure/: __init__.py  container.py  logging.py
src/prompt_mapper/utils/: __init__.py  exceptions.py  file_utils.py  radarr_cleaner.py  text_utils.py
tests/: conftest.py
tests/integration/: conftest.py  test_cli_integration.py  test_end_to_end.py  test_radarr_import.py
tests/unit/: test_config.py  test_file_scanner.py  test_radarr_cleaner.py  test_radarr_import.py
